bin/tests/snapshots/bool_comparison__e242c6e0c4298e00ab2cae2f89de63cc_lint_errfmt.snap
---
source: bin/tests/bool_comparison.rs
---
false != false
---
<temp_file_path>>1:1:W:1:[bool_comparison] Equality comparison between boolean literals
