bin/tests/snapshots/bool_comparison__e242c6e0c4298e00ab2cae2f89de63cc_lint_stderr.snap
---
source: bin/tests/bool_comparison.rs
---
false != false
---
[01] Warning: Equality comparison between boolean literals
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ false != false
   │ ───────┬──────  
   │        ╰──────── Equality comparison between boolean literals
───╯
