bin/tests/snapshots/bool_comparison__eb450df0fb6d76e9df94f175a6b87a7c_lint.snap
---
source: bin/tests/bool_comparison.rs
---
true == false
---
[bool_comparison] Warning: Equality comparison between boolean literals
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ true == false
   │ ──────┬──────  
   │       ╰──────── Equality comparison between boolean literals
───╯
