bin/tests/snapshots/bool_comparison__eb450df0fb6d76e9df94f175a6b87a7c_lint_errfmt.snap
---
source: bin/tests/bool_comparison.rs
---
true == false
---
<temp_file_path>>1:1:W:1:[bool_comparison] Equality comparison between boolean literals
