bin/tests/snapshots/bool_comparison__eb450df0fb6d76e9df94f175a6b87a7c_lint_json.snap
---
source: bin/tests/bool_comparison.rs
---
true == false
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "bool_comparison",
      "note": "Equality comparison between boolean literals",
      "code": 1,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 14
            }
          },
          "message": "Equality comparison between boolean literals",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
