bin/tests/snapshots/bool_comparison__lint_01765d342111cdd7f2f68ac70b4a9451e5380adb64ed4d60c851c6ab437bc0ed.snap
---
source: bin/tests/bool_comparison.rs
---
expression:
true != false
---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true != false
   · ──────┬──────  
   ·       ╰──────── Equality comparison between boolean literals
───╯
