bin/tests/snapshots/bool_comparison__lint_08051134ea5336f33d012f9966fc6314cb05a44778525e5d90d002e55c68635b.snap
---
source: bin/tests/bool_comparison.rs
---
true != true

---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true != true
   · ──────┬─────  
   ·       ╰─────── Equality comparison between boolean literals
───╯
