bin/tests/snapshots/bool_comparison__lint_2c22bb8b24ebbb87fa1472969313cdbf8fccb05372ccebedbf6edf80c6164169.snap
---
source: bin/tests/bool_comparison.rs
---
false != true

---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false != true
   · ──────┬──────  
   ·       ╰──────── Equality comparison between boolean literals
───╯
