bin/tests/snapshots/bool_comparison__lint_3fce60992c69dd4f86be49b4f2898f9ecd8fce2117de78ba9dee164f01ff445b.snap
---
source: bin/tests/bool_comparison.rs
expression: snapshot
---
expression:
false != true
---
[W01] Warning: Equality comparison between boolean literals
   ╭─[<temp_file_path>:1:1]
   │
 1 │ false != true
   · ──────┬──────  
   ·       ╰──────── Equality comparison between boolean literals
───╯
